--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
                 <!-- LIST -->
                 <ul class="work-samples">
                     <!-- LIST ITEMS -->
+
+                    <!-- HEAT WAVE -->
                     <li class="single-image">
                         <div class="workcard">
                             <img src="./assets/images/project-screenshots/heatWave.png" alt="work1">
@@ -137,9 +139,9 @@
                     </li>
                     <li>
                         <div class="workcard">
-                            <img src="./assets/images/640x360.png.crdownload" alt="work4">
+                            <img src="./assets/images/project-screenshots/noteTaker.png" alt="work4">
                             <div class="banner">
-                                <a href="#" target="_blank" class="work-banner">Work Sample 4</a>
+                                <a href="#" target="_blank" class="work-banner">Note Taker</a>
                             </div>
                         </div>
                     </li>
