added extra css to product images

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                     </li>
                     <li>
                         <div class="workcard">
-                            <img src="./assets/images/640x360.png.crdownload" alt="work5">
+                            <img src="./assets/images/project-screenshots/passwordGenerator.png" alt="work5">
                             <div class="banner">
-                                <a href="#" target="_blank" class="work-banner">Work Sample 5</a>
+                                <a href="#" target="_blank" class="work-banner">Password Generator</a>
                             </div>
                         </div>
                     </li>
